base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-go
  labels:
    app: hello-go
spec:
  selector:
    matchLabels:
      app: hello-go
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hello-go
    spec:
      containers:
      - name: hello-go
        image: image-registry.openshift-image-registry.svc:5000/hello-cicd/hello-go:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: theport
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      restartPolicy: Always
