base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go
  labels:
    app: hello-go
spec:
  ports:
    - name: port8080
      port: 8080
      targetPort: 8080
  selector:
    app: hello-go
  type: LoadBalancer
